2002-06-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gen-table.c: Updated.

	* gmime-utils.c (quoted_decode): Oops. ESPECIALs are allowed
	inside of the encoded-text section of the encoded-word.

	* gmime-message.c (process_header): Add some NULL-protection.

	* gmime-iconv.c (g_mime_iconv_open): If the from charset is
	"x-unknown", replace it with the user's locale charset.

2002-06-11  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_scan_mime_part_content): If the parser
	stream is not seekable, then scan the content into a memory
	stream.

2002-06-09  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-2.0.pc.in: New file for use in pkg-config.

	* gmime-filter-strip.[c,h]: New source files implementing a stream
	filter for stripping trailing whitespace from lines (needed for
	PGP/MIME).

	* gmime-exception.[c,h]: New source files implementing generic
	error reporting functionality.

	* gmime-cipher-context.[c,h]: New abstract class for performing
	common functionality (such as encryption, decryption, signing,
	verifying, importing keys, and exporting keys) needed by any MIME
	cipher suite (PGP/MIME and S/MIME specifically).

	* gmime-multipart-signed.[c,h]: New source files implementing the
	multipart/signed specification.

	* gmime-multipart-encrypted.[c,h]: New source files implementing
	the multipart/encrypted specification.

2002-06-06  Jeffrey Stedfast  <fejj@ximian.com>

	* test-mbox.c (test_parser): Test the new set_header_regex
	function.

	* gmime-parser.c (g_mime_parser_set_header_regex): New convenience
	function to allow an application to be notified when a header
	matching a particular pattern is parsed by the
	parser. Particularly useful for finding the Status: header when
	parsing mbox files.

2002-06-04  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv-utils.c (g_mime_iconv_strndup): Pull up past fixes
	from the gmime-1 branch.

2002-06-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime.c (g_mime_init): Register the message-part class.